// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectionsMenu renders when authors page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={true}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      newCollection={true}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/institutions"
    >
      Institutions
    </CollectionLink>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when conferences page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      newCollection={true}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={true}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/institutions"
    >
      Institutions
    </CollectionLink>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when home page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      newCollection={true}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/institutions"
    >
      Institutions
    </CollectionLink>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when jobs page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={true}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      newCollection={true}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/institutions"
    >
      Institutions
    </CollectionLink>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when literature page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={true}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      newCollection={true}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/institutions"
    >
      Institutions
    </CollectionLink>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when seminars page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={true}
      newCollection={true}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/institutions"
    >
      Institutions
    </CollectionLink>
  </Col>
</Row>
`;

exports[`CollectionsMenu renders when submissions page 1`] = `
<Row
  className="__CollectionsMenu__"
  gutter={0}
  justify="center"
>
  <Col>
    <CollectionLink
      active={false}
      to="/literature"
    >
      Literature
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/authors"
    >
      Authors
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/jobs"
    >
      Jobs
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      newCollection={true}
      to="/seminars"
    >
      Seminars
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/conferences"
    >
      Conferences
    </CollectionLink>
  </Col>
  <Col>
    <CollectionLink
      active={false}
      to="/institutions"
    >
      Institutions
    </CollectionLink>
  </Col>
</Row>
`;
